# libtorch_impls

./: .gitignore  .gitmodules  README.md
cifar/: CMakeLists.txt  main.cpp
cifar/CMake/: fetch_cifar10.cmake
cifar/include/: cifar10.h  model.h  trainer.h
cifar/src/: cifar10.cpp  model.cpp
dermatologist/: CMakeLists.txt  dermatologist.cpp  download_dataset.py
fashionmnist/: CMakeLists.txt  download_fmnist.py  fmnist.cpp
